--- a/frontend/src/Dashboard.css
+++ b/frontend/src/Dashboard.css
@@ -12,6 +12,11 @@
     color: #FFF;
 }
 
+.cell-orange {
+    background-color: #9a3412;
+    color: #FFF;
+}
+
 .cell-red {
     background-color: #630e10;
     color: #FFF;
